force-app/main/default/objects/Account/fields/Checkbox1__c.field-meta.xml
<CustomField>
    <fullName>Checkbox1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox1</label>
    <type>Checkbox</type>
</CustomField>