force-app/main/default/objects/Account/fields/Checkbox_Demo__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Demo</label>
    <type>Checkbox</type>
</CustomField>