force-app/main/default/objects/Account/fields/Eight_Field__c.field-meta.xml
<CustomField>
    <fullName>Eight_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for Demo</description>
    <label>Eight Field</label>
    <type>Checkbox</type>
</CustomField>