force-app/main/default/objects/Account/fields/Field_11__c.field-meta.xml
<CustomField>
    <fullName>Field_11__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field 11</label>
    <type>Checkbox</type>
</CustomField>