force-app/main/default/objects/Account/fields/Five_Field__c.field-meta.xml
<CustomField>
    <fullName>Five_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Five Field</label>
    <type>Checkbox</type>
</CustomField>