force-app/main/default/objects/Account/fields/Fourth_Field__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fourth_Field</label>
    <type>Checkbox</type>
</CustomField>