force-app/main/default/objects/Account/fields/Seven_Field__c.field-meta.xml
<CustomField>
    <fullName>Seven_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seven Field</label>
    <type>Checkbox</type>
</CustomField>