force-app/main/default/objects/Account/fields/Six_Field__c.field-meta.xml
<CustomField>
    <fullName>Six_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Six_Field</label>
    <type>Checkbox</type>
</CustomField>