force-app/main/default/objects/Account/fields/Third_Field__c.field-meta.xml
<CustomField>
    <fullName>Third_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Third Field</label>
    <type>Checkbox</type>
</CustomField>